<resources>
   <string name="app_name">Dictador</string>
   <string name="titol">Dictador</string>
   <string name="blanc" translatable="false"> </string>
   <string name="microfon">microfon</string>
   <string name="audio">audio</string>
   <string name="desar">desar</string>
   <string name="sortir">sortir</string>

   <string name="idioma_no_soportat">TTS: Idioma no soportat</string>
   <string name="error_inici_TTS">TTS: Inicialització fallida</string>

   <string name="inici_dictat">Ja pots començar</string>
   <string name="escoltant">escoltant …</string>
   <string name="error_audio">Error d\'àudio</string>
   <string name="error_no_escolto_res">No he sentit cap veu</string>
   <string name="noutext_buit">No hi ha res per desar</string>
   <string name="text_desat">S\'ha desat el text</string>
   <string name="error_desconegut" translatable="false">Error: %d</string>
   <string name="rb_idioma_catala">Català</string>
   <string name="rb_idioma_castellano">Castellano</string>
   <string name="titol_seleccio_idioma">Idioma</string>
</resources>
