<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   tools:context="ui.PortadaFragment">

   <TextView
      android:id="@+id/titol"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:textSize="22sp"
      android:text="@string/titol"
      android:textStyle="bold" />

   <ScrollView
      android:id="@+id/text_scroll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="30dp" >
      <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:lines="24"
         android:text="@string/blanc"
         android:textSize="14sp"
         android:visibility="visible" />
   </ScrollView>

   <ImageView
      android:id="@+id/img_microfon"
      android:layout_width="80dp"
      android:layout_height="90dp"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:clickable="true"
      android:contentDescription="@string/microfon"
      android:focusable="true"
      android:src="@android:drawable/presence_audio_away" />

   <TextView
      android:id="@+id/notaVersio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:textSize="14sp"
      android:text="@string/blanc"
      android:lines="4" />

</LinearLayout>
