<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="ui.DictatFragment">

   <TextView
      android:id="@+id/titol_dictat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/titol"
      android:textSize="22sp"
      android:textStyle="bold"
      android:textAlignment="center"
      android:gravity="center"
      app:layout_constraintTop_toTopOf="parent" />

   <TextView
      android:id="@+id/avis"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="8dp"
      android:textSize="14sp"
      android:text="@string/blanc"
      android:visibility="visible"
      android:lines="1"
      android:gravity="bottom|left"
      app:layout_constraintTop_toBottomOf="@id/titol_dictat" />

   <TextView
      android:id="@+id/notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:textSize="14sp"
      android:text="@string/blanc"
      android:visibility="visible"
      android:lines="1"
      android:gravity="bottom|left"
      app:layout_constraintTop_toBottomOf="@id/avis" />

   <ScrollView
      android:id="@+id/text_scroll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/notes" >
      <TextView
         android:id="@+id/lectura"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:isScrollContainer="true"
         android:padding="3dp"
         android:background="@drawable/rounded_corner"
         android:textSize="16sp"
         android:text="@string/blanc"
         android:lines="28" />
   </ScrollView>

   <ImageView
      android:id="@+id/inici"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:focusable="true"
      android:layout_marginTop="20dp"
      android:layout_marginStart="0dp"
      android:minHeight="48dp"
      android:paddingHorizontal="26dp"
      android:src="@mipmap/playmicro"
      android:visibility="visible"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_scroll" />

   <ImageView
      android:id="@+id/pausa"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:focusable="true"
      android:layout_marginStart="70dp"
      android:minHeight="48dp"
      android:paddingHorizontal="26dp"
      android:src="@mipmap/pausa"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="@id/inici"
      app:layout_constraintTop_toTopOf="@id/inici" />

   <ImageView
      android:id="@+id/desar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:focusable="true"
      android:minHeight="48dp"
      android:paddingHorizontal="26dp"
      android:src="@mipmap/desar"
      app:layout_constraintRight_toLeftOf="@id/inici"
      app:layout_constraintTop_toTopOf="@id/inici" />

   <ImageView
      android:id="@+id/stop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:focusable="true"
      android:minHeight="48dp"
      android:paddingHorizontal="26dp"
      android:src="@mipmap/stop"
      app:layout_constraintLeft_toRightOf="@id/inici"
      app:layout_constraintTop_toTopOf="@id/inici" />

   <RadioGroup
      android:id="@+id/radioGrupIdioma"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toBottomOf="@id/inici"
      tools:ignore="MissingConstraints">

      <LinearLayout
         android:id="@+id/layoutIdioma"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginStart="8dp" >

         <RadioButton
            android:id="@+id/rbIdiomaCat"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/rb_idioma_catala" />

         <RadioButton
            android:id="@+id/rbIdiomaCas"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/rb_idioma_castellano"
            android:textSize="13sp" />
      </LinearLayout>

   </RadioGroup>

   <TextView
      android:id="@+id/error"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginBottom="10dp"
      android:layout_marginEnd="8dp"
      android:textSize="14sp"
      android:text="@string/blanc"
      android:visibility="visible"
      android:textColor="@color/vermell"
      android:lines="2"
      app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
